[tool.poetry]
name = "noaastn"
version = "0.2.4"
description = "Python package that downloads, processes and visualizes weather data from NOAA website."
authors = ["Chen Zhao, Chirag Rank, Steffen Pentelow"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ubc-MDS/noaastn"
repository = "https://github.com/ubc-MDS/noaastn"
documentation = 'https://noaastn.readthedocs.io/en/latest'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "noaastn/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
